working with jdk 10